@startuml

title __FABRIKEN's Class Diagram__\n

  namespace  {
    namespace abriken {
      class fabriken.GirokontoFabrik {
          {static} - DEFAULT_DISPO : double
          + erstellen()
      }
    }
  }
  

  namespace  {
    namespace abriken {
      abstract class fabriken.Kontofabrik {
          {abstract} + erstellen()
      }
    }
  }
  

  namespace  {
    namespace abriken {
      class fabriken.SparbuchFabrik {
          + erstellen()
      }
    }
  }
  

  fabriken.GirokontoFabrik -up-|> fabriken.Kontofabrik
  fabriken.SparbuchFabrik -up-|> fabriken.Kontofabrik


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
